src/objects/BudgetSetupQuestionnaire__c.object
<CustomObject>
    <fields>
        <fullName>BillingStructure__c</fullName>
        <label>Billing Structure</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comm_Structure__c</fullName>
        <label>Comm Structure</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ContractCurrency__c</fullName>
        <label>Contract Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dateof1stInvoice__c</fullName>
        <label>Date of 1st Invoice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DoForeignCurrenciesApply__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Foreign Currencies Apply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EscalationAppliesText__c</fullName>
        <label>Escalation Applies Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EscalationApplies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalation Applies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FixedAmount__c</fullName>
        <label>Fixed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fixed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PaymentTerms__c</fullName>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Split</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectOffline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Budget Setup Questionnaire</relationshipLabel>
        <relationshipName>BudgetSetupQuestionnaire</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Budget Setup Questionnaire</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BQ-{000000000}</displayFormat>
        <label>Budget Setup Questionnaire Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Setup Questionnaire</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>